--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://chunee.db.elephantsql.com:5432/nhhitmlp
-spring.datasource.username=nhhitmlp
-spring.datasource.password=sF9zYISxLP3-RIRKt448pegUMM8WKdAn
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
 server.servlet.context-path=/api
